several changes getting page to work

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -8,8 +8,17 @@
         {{site.description}}
       </h3>
       <hr>
+      <div class="container columns is-centered">
+          <div>
+              <a href="{{site.url}}{{site.baseurl}}/blog"
+                  class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Blog</a>
+          </div>
+          <div>
+              <a href="{{site.url}}{{site.baseurl}}/project"
+                  class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Projects</a>
+          </div>
       <a href="{{site.url}}{{site.baseurl}}/#about"
-        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
+        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">About</a>
       </a>
     </div>
   </div>
