--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,9 +24,9 @@
                 <a class="navbar-item {% if page.layout == 'default' %}is-active{% endif %}"
                     href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">HOME</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#about">ABOUT</a>
-                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/project">PROJECTS</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>
                 <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
-                href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>
+                href="{{site.url}}{{site.baseurl}}/project">PROJECT</a>
             </div>
 
         </div>
