Try to add comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,6 +74,15 @@ layout: compress
   </section>
   {% include footer.html %}
 </body>
+
+<script src="https://utteranc.es/client.js"
+        repo="https://github.com/stat426-fall2021/stat426-fall2021.github.io"
+        issue-term="pathname"
+        theme="github-dark-orange"
+        crossorigin="anonymous"
+        async>
+</script>
+
 <script>
   /**
    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
