Try comments again

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,11 +77,13 @@ layout: compress
 
 <script src="https://utteranc.es/client.js"
         repo="https://github.com/stat426-fall2021/stat426-fall2021.github.io"
-        issue-term="pathname"
+        issue-term="title"
+        label="💬"
         theme="github-dark-orange"
         crossorigin="anonymous"
         async>
 </script>
+
 
 <script>
   /**
@@ -101,5 +103,4 @@ layout: compress
     (d.head || d.body).appendChild(s);
   })();
 </script>
-
 </html>
