Try comments again

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@ layout: compress
 </body>
 
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/stat426-fall2021/stat426-fall2021.github.io"
+        repo="stat426-fall2021/stat426-fall2021.github.io"
         issue-term="title"
         label="💬"
         theme="github-dark-orange"
