--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,17 +72,18 @@ layout: compress
       </div>
     </div>
   </section>
+
+  <script src="https://utteranc.es/client.js"
+          repo="stat426-fall2021/stat426-fall2021.github.io"
+          issue-term="pathname"
+          label="💬"
+          theme="boxy-light"
+          crossorigin="anonymous"
+          async>
+  </script>
+
   {% include footer.html %}
 </body>
-
-<script src="https://utteranc.es/client.js"
-        repo="stat426-fall2021/stat426-fall2021.github.io"
-        issue-term="title"
-        label="💬"
-        theme="github-dark-orange"
-        crossorigin="anonymous"
-        async>
-</script>
 
 
 </html>
