--- a/_includes/blog-card.html
+++ b/_includes/blog-card.html
@@ -7,6 +7,8 @@
             <h1 class="title is-size-4-touch">{{post.title}}</h1>
             <div class="content has-text-grey">
                 {{ post.description }}
+                by <a href="{% if author %}{{ author.web }}{% else %}{{site.url}}{{site.baseurl}}/#about{% endif %}" target="_blank"><b class="has-text-link"><u>{{author.name}}</u></b>
+              </a>
                 <hr class="has-background-grey">
                 <span class="has-text-grey">Published on <span class="has-text-weight-semibold">{{ post.date | date: "%-B %d, %Y" }}</span></span> | <i class="fas fa-clock"></i> <span class="has-text-weight-semibold">{% assign words = post.content | number_of_words %}{%- unless content.size == 0 -%}{{ words | divided_by:180 }} min{% endunless %}</span> read
             </div>
