--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,29 @@
                 </div>
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
                     <p>{{site.author-about}}</p>
+
                     <br>
+                    
+                    <p>
+                    Check out our class blog and class projects!
+                    </p>
+
+                    <br>
+                    <div class="container columns is-centered">
+                        <div>
+                            <a href="{{site.url}}{{site.baseurl}}/blog"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">BLOG</a>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="{{site.url}}{{site.baseurl}}/project"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">PROJECTS</a>
+                            </a>
+                        </div>
+                    </div>
+                    <a href="https://unsplash.com/photos/vb-3qEe3rg8">Photo</a>
+                    by <a href="https://unsplash.com/@davidclode?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">David Clode</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+
                 </div>
             </div>
         </div>
